<resources>
    <string name="app_name">Text Repeater</string>
    <string name="generate">Generate</string>
    <string name="repeat_on_new_line">Repeat on new line</string>
    <string name="clear_all">Clear all</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>