<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:backgroundTint="@color/primary"
                app:navigationIcon="@drawable/baseline_dehaze_24"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarLayout"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:scrollbars="none">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_border"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputTextLayout"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="20dp"
                            android:autofillHints="name"
                            android:hint="Enter Text"
                            android:textColorHint="@color/black"
                            app:counterEnabled="true"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            tools:ignore="HardcodedText">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/inputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/black" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputNumberLayout"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/inputTextLayout"
                            android:layout_marginHorizontal="20dp"
                            android:hint="Enter number of repetitions"
                            android:textColorHint="@color/black"
                            app:endIconMode="clear_text"
                            tools:ignore="HardcodedText">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/inputNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="5"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <CheckBox
                            android:id="@+id/newLineCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/inputNumberLayout"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:paddingEnd="10dp"
                            android:text="@string/repeat_on_new_line"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            tools:ignore="RtlSymmetry" />

                        <LinearLayout
                            android:id="@+id/generateButtonLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/newLineCheckBox"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/clearButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/white"
                                android:text="@string/clear_all"
                                android:textAlignment="center"
                                android:textColor="@color/primary" />

                            <Button
                                android:id="@+id/generateButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/primary"
                                android:text="@string/generate"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardView1"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingBottom="16dp">

                        <LinearLayout
                            android:id="@+id/buttonLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/copyButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:drawableLeft="@drawable/copy_icon"
                                android:text="@string/copy"
                                android:textAlignment="center"
                                android:textColor="@color/black" />

                            <Button
                                android:id="@+id/shareButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:drawableLeft="@drawable/whatsapp_icon"
                                android:text="@string/share"
                                android:textAlignment="center"
                                android:textColor="@color/black" />
                        </LinearLayout>
                        8

                        <androidx.core.widget.NestedScrollView
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_below="@+id/buttonLayout"
                            android:layout_marginHorizontal="20dp"
                            tools:ignore="NestedScrolling">

                            <TextView
                                android:id="@+id/outputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="16dp"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </androidx.core.widget.NestedScrollView>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
